fixed display issue where avatars were not showing up on posts (witstream)
git-svn-id: https://nom.svn.beanstalkapp.com/microblog/trunk@212 874695d1-85b0-4378-8154-42b2b3dd7dfc

--- a/system/application/views/themes/witstream/css/layout.css
+++ b/system/application/views/themes/witstream/css/layout.css
@@ -682,12 +682,8 @@ input.search.button {
 .message a.image {
 	float:left; 
 	margin:3px 10px 3px 0; 
-	padding:4px;
-	border:1px solid #bbb;
-	background:#fff;
 }
 .message a.image:hover {
-	border:1px solid #666;
 }
 .message a.image img {
 	float:left; 
